Halfway implemented multiple binding types on the qtite alter.